# qorvo_uwb_dwm3000_zephyr_app_starting_template

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml
app/: CMakeLists.txt  Kconfig  README.md
app/core/: CMakeLists.txt  Kconfig  README.md  main.c
app/external_interfaces/: CMakeLists.txt  Kconfig  README.md
app/hw_modules/: CMakeLists.txt  Kconfig  README.md
app/hw_modules/qorvo_uwb_dwm3000/: CMakeLists.txt  Kconfig  README_USER.md
app/hw_modules/qorvo_uwb_dwm3000/platform/: deca_spi.c
app/sw_modules/: Kconfig  README.md
boards/: README.md
boards/arm/my_board_id/: Kconfig.board  Kconfig.defconfig  my_board_id.dts  my_board_id.yaml  my_board_id_defconfig
boards/overlays/: nrf52833dongle_nrf52833.overlay
conf/: README.md
conf/common/: README.md  qorvo-uwb-dwm3000-debug-and-log.conf  qorvo-uwb-dwm3000.conf
conf/core/: README.md
doc/: README.md
